--- a/user_line/style/index.css
+++ b/user_line/style/index.css
@@ -1,7 +1,7 @@
     body {
     margin: 0;
     padding: 0;
-    font-family: 'Sarabun', sans-serif;
+    font-family: 'Sarabun',
 }
     .login{
         width: 100%;
@@ -15,6 +15,11 @@
     position: relative;
     background-color: #ffffff;
     border-bottom:1px solid rgba(0, 0, 0, 0.1);
+}
+.head-bar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .second-menu .company{
     color: #144568;
@@ -85,7 +90,7 @@ input[type=text].message {
     outline: none;
     border-radius: 6px;
     width: 284px;
-    height: 34px;
+    height: 42px;
 }
 
 input[type=checkbox]{
@@ -120,7 +125,7 @@ input[type=checkbox]{
     background: #5BB6F9;
     border: 0px solid #5BB6F9 !important;
 }
-.button-login:hover{
+.button-login:focus{
     background-color: #3b74de;
 }
 .button-login .submit{
@@ -195,6 +200,7 @@ input[type=email]{
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
     width: 139px;
     height: 139px;
     margin: 0px 40px;
@@ -454,7 +460,7 @@ td {
 }
  input[type=text].start.fill-overtime{
     width: 280px;
-    height: 34px;
+    height: 42px;
 }
 .start.fill-overtime{
     padding: 0px 16px;
@@ -463,7 +469,7 @@ td {
     outline: none;
     border-radius: 6px;
     width: 280px;
-    height: 34px;
+    height: 42px;
 }
 .button-submit {
     width: 164px;
@@ -482,7 +488,7 @@ td {
     border: 1px solid #2196F3 !important;
 }
 
-.confirm:hover {
+.confirm:focus {
     background-color: #3b74de;
     ;
 }
@@ -523,7 +529,7 @@ select.classic {
         5px 5px,
         2.5em 2.5em;
     width: 280px;
-    height: 34px;
+    height: 42px;
 
     background-repeat: no-repeat;
     border: thin solid rgba(0, 0, 0, 0.2);
@@ -569,7 +575,7 @@ select:focus-visible {
     background-color: #2196F3;
     border: 1px solid #2196F3 !important
 }
-.confirm-details:hover {
+.confirm-details:focus {
     background-color: #3b74de;
     ;
 }
@@ -688,7 +694,7 @@ select:focus-visible {
     height: 20px;
     position: absolute;
     right: 8px;
-    top: 32px;
+    top: 36px;
 }
 
 .turn-on {
@@ -696,7 +702,7 @@ select:focus-visible {
     height: 20px;
     position: absolute;
     right: 8px;
-    top: 32px;
+    top: 36px;
 }
 #myInput {
 padding: 0px 16px;
@@ -705,7 +711,7 @@ padding: 0px 16px;
     outline: none;
     border-radius: 6px;
     width: 284px;
-    height: 34px;
+    height: 42px;
     margin-top: 24px;
 }
 .dropdown {
@@ -730,10 +736,34 @@ padding: 0px 16px;
     text-decoration: none;
     display: block;
 }
-.dropdown-content a:hover {
+/* .dropdown-content a:hover {
     background-color: #f1f1f1;
     color: #3f78ff;
 }
 .dropdown:hover .dropdown-content {
     display: block;
+} */
+.w3-show{
+    display: block !important;
+}
+.w3-dropdown-content{
+    display: none;
+    position: absolute;
+    right: 0px;
+    font-size: 14px;
+    width: 116px;
+    height: 34px;
+    border-radius: 6px;
+    background-color: #ffffff;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    /* z-index: 1; */
+    margin-top: 6px;
+    }
+
+.w3-bar-block .w3-bar-item{
+    position: absolute;
+    color: black;
+    font-family: Sarabun;
+    left: 16px;
+    top: 6px;
 }
