--- a/user_line/style/index.css
+++ b/user_line/style/index.css
@@ -704,7 +704,7 @@ select:focus-visible {
     right: 8px;
     top: 36px;
 }
-#myInput {
+#password {
 padding: 0px 16px;
     box-sizing: border-box;
     border: 2px solid #144568;
